<resources>
    <string name="app_name">MoTrails</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter username</string>
    <string name="button_username">Enter Username</string>
    <string name="button_addTrail">Record a new Trail</string>
    <string name="button_findTrails">Find Trails</string>
    <string name="button_findFriends">Find Friends</string>
    <string name="title_activity_record_trail">RecordTrailActivity</string>
    <string name="title_activity_find_trails">FindTrailsActivity</string>
    <string name="button_start_recording">Begin Recording Trail</string>
    <string name="button_stop_recording">Stop Recording</string>
    <string name="addPoint">Add Waypoint</string>
    <string name="title_activity_add_waypoint">AddWaypoint</string>
    <string name="addPhoto">Add Photo</string>
    <string name="takePhoto">Take Picture</string>
    <string name="titleText">Title</string>
    <string name="descriptionText">Description</string>
    <string name="please_turn_on_gps">Please activate GPS signal</string>
</resources>
