<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UserHomeActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_sm"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.13" />

    <TextView
        android:layout_width="113dp"
        android:layout_height="30dp"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03"
        android:id="@+id/text_appTitle"
        android:textSize="24sp" />
    
    <Button
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:text="@string/button_addTrail"
        android:id="@+id/button_addTrail"
        android:onClick="gotoRecordTrail"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:text="@string/button_findTrails"
        android:onClick="gotoFindTrails"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_findTrails"
        android:layout_weight="0.05" />

    <Button
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:text="@string/button_findFriends"
        android:onClick="gotoFindFriends"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_findFriends"
        android:layout_weight="0.05" />


</LinearLayout>
