<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.csus.teamname.motrails.AddWaypoint">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/waypointPhotoImageView"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/description"
        android:text="@string/descriptionText"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/description"
        android:id="@+id/waypointDescription" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/waypointDescription"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:text="@string/titleText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/title"
        android:layout_centerHorizontal="true"
        android:id="@+id/waypointTitle" />


    <Button android:id="@+id/takePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/waypointTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/takePhoto"
        android:onClick="takePhoto"></Button>


   <!-- <Button android:id="@+id/addPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/takePhotoButton"
        android:layout_centerHorizontal="true"
        android:text="@string/addPhoto" android:onClick="addPhoto"></Button>-->



</RelativeLayout>
