<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.csus.teamname.motrails.RecordTrailActivity">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"/>


    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/ui_button"
        android:text="@string/button_stop_recording"
        android:onClick="stopRecording"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/stopRecordingButton"
        android:visibility="invisible"
        android:maxHeight="60dp"
        android:minHeight="60dp"
        android:maxWidth="325dp"
        android:minWidth="325dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startRecordingButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/ui_button"
        android:text="@string/button_start_recording"
        android:onClick="startRecording"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/stopRecordingButton"
        android:maxHeight="60dp"
        android:minHeight="60dp"
        android:maxWidth="325dp"
        android:minWidth="325dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/addWaypointButton"
        android:text="@string/addPoint"
        android:onClick="addWaypoint"
        android:layout_above="@id/stopRecordingButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ui_button"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:maxHeight="60dp"
        android:minHeight="60dp"
        android:maxWidth="325dp"
        android:minWidth="325dp"
        android:layout_marginBottom="10dp"
        android:textSize="14dp"
        android:textStyle="bold" />


</RelativeLayout>
